# crypto-strategy

./: README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
src/crypto_strategy/: bo_strategy.py  cli.py  data.py  ma_strategy.py  macd_strategy.py  plot.py  portfolio_weighting.py  reporting.py  strategies.py  strategy_base.py
src/crypto_strategy/commands/: cli.py
src/crypto_strategy/portfolio/: portfolio_utils.py  portfolio_weighting.py
src/crypto_strategy/reporting/: plot.py  report.py  reporting_base.py
src/crypto_strategy/strategies/: base.py  bo_strategy.py  filters.py  ma_strategy.py  macd_strategy.py  strategy_base.py
src/finlab_crypto/: __init__.py  chart.py  crawler.py  online.py  plot.py  strategy.py  utility.py
tests/: positions_XRPUSDT-4h-bo-100-15-ts_stop-0.10-vol-10-2-20211230.pkl  test_add_ts_stop.py  test_regression.py  test_ts_stop.py
