[metadata]
name = crypto-strategy
version = 0.1.0
author= Ming Gao
author_email = ming_gao@outlook.com
url = https://github.com/minggnim/algo-trading
description = Repo to create Crypto strategies
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
    numba
    pandas
    ta-lib
    vectorbt
    python-binance
    tqdm

[options.extras_require]
cli = 
    click
utils = 
    statsmodels
    pyecharts 
    seaborn

[options.entry_points]
console_scripts =
    crypto = crypto_strategy.cli:cli